--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,11 +1,10 @@
 // Body
 $body-bg: #f8fafc;
-
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Nunito',
+sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
-
 // Colors
 $blue: #3490dc;
 $indigo: #6574cd;
@@ -17,3 +16,14 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+//boolbnb
+$color-accent: #ff385c;
+$color-accent-hover: #ff002f;
+$color-gray-1: #c8c8c8;
+$color-gray-1-hover: #9b9b9b;
+$color-gray-2: #222222;
+$color-gray-2-hover: #000000;
+$color-white: #ffffff;
+$color-white-hover: #dddddd;
+$color-gold: #ffd700;
+$box-shadow: #00000040;
