--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,5 +4,7 @@
 @import 'variables';
 //apartments
 @import './partials/apartments';
+//login
+@import './partials/_login';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
