--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -1,8 +1,10 @@
 .nav-ul {
     list-style-type: none;
+    margin-bottom: 0 !important;
     .nav-li {
         text-decoration: none;
         color: $color-gray-2;
+        margin-left: 50px;
     }
     .nav-li:hover {
         color: $color-accent;
@@ -10,24 +12,26 @@
 }
 
 .title {
-    padding: 10px;
+    padding: 15px;
 }
 
 .nav-flex {
     display: flex;
-    height: 100%;
 }
 
 .button {
     background-color: $color-accent;
-    padding: 10px;
+    padding: 6px;
     border: 0px;
     border-radius: 8px;
-    position: absolute;
-    bottom: 0;
-    right: 0;
+    color: white;
 }
 
 .pos-rel {
-    position: relative;
+    width: 25vw;
+}
+
+.test {
+    display: flex;
+    justify-content: space-between;
 }
