--- a/public/css/app.css
+++ b/public/css/app.css
@@ -81,6 +81,7 @@ ul {
   text-decoration: none;
   color: #222222;
   margin-left: 50px;
+  margin-bottom: 10px;
 }
 
 .nav-ul .nav-li:hover {
@@ -104,12 +105,40 @@ ul {
 }
 
 .pos-rel {
-  width: 25vw;
+  width: 40vw;
 }
 
 .test {
   display: flex;
   justify-content: space-between;
+}
+
+.brief-statistics {
+  display: flex;
+}
+
+.template-image {
+  height: 160px;
+  width: 160px;
+}
+
+.statistics-written {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-left: 20px;
+}
+
+h4 {
+  padding-bottom: 12px;
+}
+
+.main-page {
+  margin-top: 20px;
+}
+
+.spacing-title {
+  padding-top: 20px;
 }
 
 .login-title {
