--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -5,6 +5,7 @@
         text-decoration: none;
         color: $color-gray-2;
         margin-left: 50px;
+        margin-bottom: 10px;
     }
     .nav-li:hover {
         color: $color-accent;
@@ -28,10 +29,38 @@
 }
 
 .pos-rel {
-    width: 25vw;
+    width: 40vw;
 }
 
 .test {
     display: flex;
     justify-content: space-between;
+}
+
+.brief-statistics {
+    display: flex;
+}
+
+.template-image {
+    height: 160px;
+    width: 160px;
+}
+
+.statistics-written {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-left: 20px;
+}
+
+h4 {
+    padding-bottom: 12px;
+}
+
+.main-page {
+    margin-top: 20px;
+}
+
+.spacing-title {
+    padding-top: 20px;
 }
