--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -24,6 +24,7 @@ $color-gray-1-hover: #9b9b9b;
 $color-gray-2: #222222;
 $color-gray-2-hover: #000000;
 $color-white: #ffffff;
+$dirty-white: #EEEEEE;
 $color-white-hover: #dddddd;
 $color-gold: #ffd700;
 $box-shadow: #00000040;
