--- a/resources/sass/partials/_dashboard.scss
+++ b/resources/sass/partials/_dashboard.scss
@@ -5,7 +5,7 @@
         text-decoration: none;
         color: $color-gray-2;
         margin-left: 50px;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
     }
     .nav-li:hover {
         color: $color-accent;
@@ -13,7 +13,14 @@
 }
 
 .title {
-    padding: 15px;
+    padding: 12px;
+    border-bottom: 1px solid $dirty-white;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav-flex {
@@ -22,10 +29,11 @@
 
 .button {
     background-color: $color-accent;
-    padding: 6px;
+    padding: 8px;
     border: 0px;
     border-radius: 8px;
     color: white;
+    font-size: 12px;
 }
 
 .pos-rel {
@@ -37,13 +45,14 @@
     justify-content: space-between;
 }
 
-.brief-statistics {
-    display: flex;
-}
-
 .template-image {
     height: 160px;
     width: 160px;
+}
+
+.hover:hover {
+    background-color: black;
+    z-index: 1;
 }
 
 .statistics-written {
@@ -53,14 +62,64 @@
     margin-left: 20px;
 }
 
-h4 {
+.accent {
     padding-bottom: 12px;
-}
-
-.main-page {
-    margin-top: 20px;
+    padding-top: 12px;
+    color: $color-accent;
 }
 
 .spacing-title {
     padding-top: 20px;
+}
+
+.statistics {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+.cards {
+    display: flex;
+    margin-top: 20px;
+}
+
+.description {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.dash-title {
+    margin-bottom: 30px;
+    width: 40%;
+}
+
+.color-welcome {
+    color: rgb(114, 114, 114);
+    text-align: center;
+    margin-top: 25px;
+    background-color: $dirty-white;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.bg-color {
+    background-color: $dirty-white;
+}
+
+.flex-right {
+    padding-right: 40px;
+    padding-left: 40px;
+}
+
+.nav-bar {
+    padding-top: 50px;
+}
+
+.margin-bottom {
+    margin-bottom: 30px;
+}
+
+.movement {
+    display: flex;
+    justify-content: center;
 }
