--- a/public/css/app.css
+++ b/public/css/app.css
@@ -28,9 +28,11 @@
   background-color: white;
   color: #222222;
   padding: 5px;
+  width: 100px;
   margin-bottom: 10px;
   border-width: 1px;
   border-radius: 10px;
+  font-size: 14px;
 }
 
 .button-show:hover {
@@ -69,7 +71,11 @@ ul {
   border-radius: 10px;
   -o-box-shadow: 5px 5px 10px 0px #000000;
   box-shadow: 5px 5px 10px 0px #222222;
-  width: 80%;
+  width: 92%;
+}
+
+main {
+  height: 100%;
 }
 
 .nav-ul {
@@ -101,6 +107,7 @@ ul {
 
 .nav-flex {
   display: flex;
+  min-height: 100%;
 }
 
 .button {
@@ -198,6 +205,10 @@ ul {
 .movement {
   display: flex;
   justify-content: center;
+}
+
+body {
+  min-height: 100vh;
 }
 
 .login-title {
