--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,8 @@
 @import './partials/_login';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+//reset user agent
 * {
     margin: 0;
     padding: 0;
