--- a/public/css/app.css
+++ b/public/css/app.css
@@ -74,6 +74,112 @@ ul {
   width: 92%;
 }
 
+.autocomplete {
+  z-index: 10;
+  width: 10vw;
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid black;
+  border-radius: 20px;
+  position: absolute;
+}
+
+.autocomplete ul {
+  list-style: none;
+}
+
+.autocomplete ul li {
+  font-family: monospace;
+  opacity: 0.7;
+  border-bottom: 1px solid grey;
+  padding: 5px 0;
+  cursor: pointer;
+}
+
+.autocomplete ul li:last-of-type {
+  border: none;
+}
+
+.autocomplete ul li:hover {
+  opacity: 1;
+}
+
+.index-container {
+  width: 96vw;
+  margin: 0 auto;
+  z-index: 10;
+}
+
+.opacity {
+  opacity: 0.5;
+}
+
+.index-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  align-items: center;
+  overflow: auto;
+  height: 80vh;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.index-card {
+  border: 1px solid;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  height: 600px;
+  width: calc(25% - 10px);
+  margin-left: 5px;
+  margin-top: 16px;
+  border-radius: 10px;
+}
+
+.index-img-cont {
+  width: auto;
+  height: auto;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.index-img-top {
+  width: 100%;
+}
+
+.index-btn {
+  padding: 10px;
+  color: red;
+  border-radius: 10px;
+  border: 0.2px solid grey;
+  box-shadow: 2px 2px 1px gray;
+}
+
+.index-container {
+  width: 80vw;
+  height: 70vh;
+  margin: 0 auto;
+}
+
+.index-search {
+  width: 40vw;
+  margin-left: 30%;
+  border-radius: 5px;
+  box-shadow: 2px 2px 1px gray;
+  border: 0 solid gray;
+  margin-top: 16px;
+  padding: 5px 5px 5px 15px;
+}
+
+.index-card-title {
+  margin-top: 10px;
+  font-size: 1.2em;
+  font-weight: 700;
+}
+
 .nav-ul {
   list-style-type: none;
   margin-bottom: 0 !important;
