--- a/resources/sass/partials/_landingpage.scss
+++ b/resources/sass/partials/_landingpage.scss
@@ -1,6 +1,6 @@
 .autocomplete {
     z-index: 10;
-    width: 10vw;
+    width: 50vw;
     background-color: #fff;
     padding: 20px;
     border: 1px solid black;
@@ -24,7 +24,7 @@
     }
 }
 .index-container{
-    // box-shadow: 5px 10px #888888;
+    // border-left: 1px solid grey;
     width: 96vw;
     margin: 0 auto;
     z-index: 10;
@@ -40,13 +40,13 @@
     justify-content: start;
     align-items: center;
     overflow: auto;
-    height: 80vh;
-    width: 100%;
+    height: 85vh;
+    width: 90%;
     margin: 0 auto;
 }
 
 .index-card{
-    border: 1px solid;
+    border: 1px solid grey;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -54,22 +54,23 @@
     align-items: center;
     height: 600px;
     width: calc((100%/4) - 10px);
-    // padding: 10px 10px 20px 10px;
-    margin-left: 5px;
+    padding: 10px 10px 20px 10px;
+    margin-left: 7px;
     margin-top: 16px;
     border-radius: 10px;
+    box-shadow: 2px 2px 1px gray;
 }
 
 .index-img-cont{
-width: auto;
-height: auto;
-border-radius: 20px;
-text-align: center;
+    width: auto;
+    height: auto;
+    border-radius: 20px;
 }
 
 .index-img-top{
     width: 100%;
-    // margin-left: 7px;
+    margin-left: 7px;
+    // FIXME Da capire come mai non mi fa il border-radius:
     // border-radius: 20px;
 }
 
@@ -94,7 +95,7 @@ text-align: center;
     border-radius: 5px;
     box-shadow: 2px 2px 1px gray;
     border: 0.0 solid gray;
-    // margin-bottom: 5px;
+    margin-bottom: 15px;
     margin-top: 16px;
     padding: 5px 5px 5px 15px;
 }
