--- a/public/css/app.css
+++ b/public/css/app.css
@@ -76,7 +76,7 @@ ul {
 
 .autocomplete {
   z-index: 10;
-  width: 10vw;
+  width: 50vw;
   background-color: #fff;
   padding: 20px;
   border: 1px solid black;
@@ -120,13 +120,13 @@ ul {
   justify-content: start;
   align-items: center;
   overflow: auto;
-  height: 80vh;
-  width: 100%;
+  height: 85vh;
+  width: 90%;
   margin: 0 auto;
 }
 
 .index-card {
-  border: 1px solid;
+  border: 1px solid grey;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -134,20 +134,22 @@ ul {
   align-items: center;
   height: 600px;
   width: calc(25% - 10px);
-  margin-left: 5px;
+  padding: 10px 10px 20px 10px;
+  margin-left: 7px;
   margin-top: 16px;
   border-radius: 10px;
+  box-shadow: 2px 2px 1px gray;
 }
 
 .index-img-cont {
   width: auto;
   height: auto;
   border-radius: 20px;
-  text-align: center;
 }
 
 .index-img-top {
   width: 100%;
+  margin-left: 7px;
 }
 
 .index-btn {
@@ -170,6 +172,7 @@ ul {
   border-radius: 5px;
   box-shadow: 2px 2px 1px gray;
   border: 0 solid gray;
+  margin-bottom: 15px;
   margin-top: 16px;
   padding: 5px 5px 5px 15px;
 }
