--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,8 +1,8 @@
 // Body
 $body-bg: #f8fafc;
 // Typography
-$font-family-sans-serif: 'Nunito',
-sans-serif;
+$segoe: 'Segoe UI', sans-serif;
+                                                
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 // Colors
