--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,3 @@
-// Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
 // Variables
 @import 'variables';
 //apartments
@@ -7,9 +5,7 @@
 //dahsboard
 @import './partials/dashboard';
 //login
-@import './partials/_login';
-// Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import './partials/login';
 
 //reset user agent
 * {
