--- a/public/css/app.css
+++ b/public/css/app.css
@@ -74,6 +74,27 @@ ul {
   width: 92%;
 }
 
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.index-title {
+  text-align: center;
+  color: red;
+  font-weight: 700;
+}
+
+.index-line {
+  border-bottom: 1px grey solid;
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 16px;
+}
+
 .autocomplete {
   z-index: 10;
   width: 50vw;
@@ -108,6 +129,8 @@ ul {
   width: 96vw;
   margin: 0 auto;
   z-index: 10;
+  height: 70vh;
+  margin: 0 auto;
 }
 
 .opacity {
@@ -141,15 +164,9 @@ ul {
   box-shadow: 2px 2px 1px gray;
 }
 
-.index-img-cont {
-  width: auto;
-  height: auto;
-  border-radius: 20px;
-}
-
 .index-img-top {
   width: 100%;
-  margin-left: 7px;
+  border-radius: 20px;
 }
 
 .index-btn {
@@ -158,12 +175,6 @@ ul {
   border-radius: 10px;
   border: 0.2px solid grey;
   box-shadow: 2px 2px 1px gray;
-}
-
-.index-container {
-  width: 80vw;
-  height: 70vh;
-  margin: 0 auto;
 }
 
 .index-search {
