--- a/public/css/app.css
+++ b/public/css/app.css
@@ -200,10 +200,15 @@ ul {
   justify-content: center;
 }
 
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
 .login-title {
   font-weight: bold;
   text-align: center;
-  padding: 1rem;
+  font-weight: bold;
+  padding-bottom: 1rem;
 }
 
 .container {
@@ -216,6 +221,8 @@ ul {
   border-radius: 5px;
   font-weight: 500;
   color: white;
+  border: 0px white solid !important;
+  cursor: pointer;
   background-color: #ff385c;
 }
 
@@ -239,6 +246,40 @@ nav .navbar-options .navbar-nav {
 nav .navbar-options .navbar-nav a {
   text-decoration: none;
   padding: 0 10px;
+}
+
+.login-container {
+  text-align: center;
+}
+
+.card {
+  display: inline-block;
+  text-align: center;
+  padding: 50px;
+  margin: 100px 0;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  border-radius: 15px;
+}
+
+.card .form-control {
+  width: 20rem;
+  border-radius: 10px;
+  padding: 10px;
+  font-size: small;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.card .form-check {
+  font-weight: bold;
+  font-size: small;
+  margin-bottom: 10px;
+}
+
+.card .form-check input {
+  vertical-align: middle;
 }
 
 * {
