--- a/resources/sass/partials/_login.scss
+++ b/resources/sass/partials/_login.scss
@@ -1,7 +1,11 @@
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .login-title {
     font-weight: bold;
     text-align: center;
-    padding: 1rem;
+    font-weight: bold;
+    padding-bottom: 1rem;
 }
 .container {
 
@@ -13,6 +17,8 @@
    border-radius: 5px;
    font-weight: 500;
    color: white;
+   border: 0px white solid !important;
+   cursor:pointer;
    background-color: $color-accent;
 }
 
@@ -43,3 +49,34 @@ nav {
         }
     }
 }
+.login-container{
+    text-align: center;
+}
+.card{
+    .form-control{
+        width: 20rem;
+        border-radius: 10px ;
+        padding: 10px;
+        font-size: small;
+        font-weight: bold;
+        margin-bottom:1rem;
+    }
+    .form-check{
+        input{
+            vertical-align: middle;
+        }
+        font-weight: bold;
+        font-size: small;
+        margin-bottom: 10px;
+    }
+    display: inline-block;
+    text-align: center  ;
+    padding:50px;
+    margin: 100px 0;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
+    
+}
+
