--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -29,11 +29,11 @@
 
 .button_accent {
     background-color: $color-accent;
-    padding: 8px;
+    padding: 10px;
     border: 0px;
     border-radius: 8px;
     color: white !important;
-    font-size: 12px;
+    font-size: 13px;
     text-decoration: none;
 }
 
@@ -56,4 +56,9 @@
 
 .text_decoration_none {
     text-decoration: none;
+}
+
+.button-crud:focus {
+    outline: none;
+    color: red;
 }
