--- a/resources/sass/partials/_landingpage.scss
+++ b/resources/sass/partials/_landingpage.scss
@@ -6,19 +6,6 @@
     box-sizing: border-box;
 }
 
-.index-title{
-    text-align: center;
-    color: red;
-    font-weight:700;
-}
-
-.index-line{
-    border-bottom: 1px grey solid;
-    width: 80%;
-    margin: 0 auto;
-    margin-bottom: 16px;
-}
-
 .autocomplete {
     z-index: 10;
     width: 50vw;
@@ -45,13 +32,24 @@
     }
 }
 
-.index-container{
-    // border-left: 1px solid grey;
-    width: 96vw;
-    margin: 0 auto;
-    z-index: 10;
-    height: 70vh;
-    margin: 0 auto;
+.index-search{
+    width: 40vw;
+    margin-left: 3%;
+    border-radius: 3px;
+    box-shadow: 2px 2px 1px gray;
+    border: 0.0 solid gray;
+    margin-bottom: 16px;
+    margin-top: 16px;
+    padding: 5px 5px 5px 15px;
+}
+
+.index-search-2{
+    padding: 5px 5px 5px 15px;
+    box-shadow: 2px 2px 1px gray;
+    margin-left: 0.4%;
+    border-radius: 3px;
+    text-decoration: none;
+    color: black;
 }
 
 .opacity {
@@ -64,53 +62,43 @@
     justify-content: start;
     align-items: center;
     overflow: auto;
-    height: 85vh;
-    width: 90%;
+    height: 80vh;
+    width: 94%;
     margin: 0 auto;
-}
 
-.index-card{
-    border: 1px solid grey;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    height: 600px;
-    width: calc((100%/4) - 10px);
-    padding: 10px 10px 20px 10px;
-    margin-left: 7px;
-    margin-top: 16px;
-    border-radius: 10px;
-    box-shadow: 2px 2px 1px gray;
-}
+    .index-card{
+        border: 1px solid grey;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: center;
+        height: 650px;
+        width: calc((100%/4) - 24px);
+        padding: 10px 10px 20px 10px;
+        margin-left: 12px;
+        margin-top: 50px;
+        border-radius: 10px;
+        box-shadow: 2px 2px 1px gray;
 
-.index-img-top{
-    width: 100%;
-    border-radius: 20px;
-}
+        .index-img-top{
+            width: 100%;
+            border-radius: 20px;
+        }
 
-.index-btn{
-    padding: 10px;
-    color: red;
-    border-radius: 10px;
-    border: 0.2px solid grey;
-    box-shadow: 2px 2px 1px gray;
-}
+        .index-card-title{
+            margin-top: 10px;
+            font-size: 1.2em;
+            font-weight: 700;
+        }
 
-.index-search{
-    width: 40vw;
-    margin-left: 30%;
-    border-radius: 5px;
-    box-shadow: 2px 2px 1px gray;
-    border: 0.0 solid gray;
-    margin-bottom: 15px;
-    margin-top: 16px;
-    padding: 5px 5px 5px 15px;
-}
+        .index-btn{
+            padding: 10px;
+            color: red;
+            border-radius: 10px;
+            border: 0.2px solid grey;
+            box-shadow: 2px 2px 1px gray;
+        }
 
-.index-card-title{
-    margin-top: 10px;
-    font-size: 1.2em;
-    font-weight: 700;
+    }
 }
