--- a/public/css/app.css
+++ b/public/css/app.css
@@ -352,6 +352,11 @@ ul {
   margin-bottom: 8px;
 }
 
+.sa-container .sa-price span {
+  margin-left: 0.5em;
+  font-weight: 500;
+}
+
 .sa-form {
   margin: 0 auto;
   width: 40vw;
