--- a/public/css/app.css
+++ b/public/css/app.css
@@ -154,24 +154,23 @@ ul {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  height: 650px;
+  height: 700px;
   width: calc(25% - 24px);
-  padding: 10px 10px 20px 10px;
   margin-left: 12px;
   margin-top: 50px;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 2px 2px 1px gray;
 }
 
 .index-cards .index-card .index-img-top {
   width: 100%;
-  border-radius: 20px;
+  border-radius: 20px 20px 0px 0px;
 }
 
 .index-cards .index-card .index-card-title {
   margin-top: 10px;
-  font-size: 1.2em;
-  font-weight: 700;
+  font-size: 1em;
+  opacity: 0.5;
 }
 
 .index-cards .index-card .index-btn {
@@ -180,6 +179,14 @@ ul {
   border-radius: 10px;
   border: 0.2px solid grey;
   box-shadow: 2px 2px 1px gray;
+}
+
+.index-cards .index-card .index-card-padding {
+  padding: 10px 10px 10px 10px;
+}
+
+.index-cards .index-card .index-card-price {
+  padding: 0px 10px 20px 10px;
 }
 
 .nav-ul {
