hamburger menu nav + apartments completi

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,8 @@
 @import './partials/dashboard';
 //common class
 @import './partials/common';
+//side navbar
+@import './partials/navbarside';
 //login
 @import './partials/login';
 //reset user agent
