--- a/resources/sass/partials/_apartments.scss
+++ b/resources/sass/partials/_apartments.scss
@@ -52,7 +52,7 @@ ul {
     border: 1px solid lightgray;
     border-radius: 10px;
     box-shadow: 5px 5px 10px 0px lightgray;
-    width: 92%;
+    width: 95%;
 }
 
 .apartment-padding {
@@ -70,4 +70,34 @@ ul {
 
 .between-tables {
     padding-top: 25px;
+}
+
+.nav-flex {
+    display: flex;
+    min-height: 100%;
+}
+
+.delete {
+    background-color: white;
+    color: $color-gray-2;
+    padding: 5px;
+    width: 100px;
+    margin-bottom: 10px;
+    border-width: 1px;
+    border-radius: 10px;
+    font-size: 14px;
+    text-decoration: none;
+    transition: all ease-in-out 0.2s;
+    cursor: pointer;
+}
+
+.delete:hover {
+    border: 1px solid $color-accent;
+    background-color: $color-accent;
+    color: white;
+}
+
+.margin-section {
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
