--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -35,6 +35,11 @@
     color: white !important;
     font-size: 13px;
     text-decoration: none;
+    font-weight: 600 !important;
+}
+
+.m-right {
+    margin-right: 20px;
 }
 
 .button_crud {
@@ -47,18 +52,27 @@
     border-radius: 10px;
     font-size: 14px;
     text-decoration: none;
+    transition: all ease-in-out 0.2s;
+    cursor: pointer;
 }
 
-.button-crud:hover {
-    color: $color-accent;
-    text-decoration: none;
+.button_crud:hover {
+    border: 1px solid $color-accent;
+    background-color: $color-accent;
+    color: white;
 }
 
 .text_decoration_none {
     text-decoration: none;
+    color: inherit;
 }
 
-.button-crud:focus {
-    outline: none;
-    color: red;
+.link-hover:hover {
+    color: white !important;
+}
+
+.clearfix {
+    content: "";
+    clear: both;
+    display: table;
 }
