--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,8 @@
 @import './partials/login';
 // Card singolo appartamento
 @import './partials/singleapartment';
+// footer
+@import './partials/footer';
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
