--- a/public/css/app.css
+++ b/public/css/app.css
@@ -331,6 +331,7 @@ ul {
   border-radius: 10px;
   box-shadow: 3px 2px 1px gray;
   padding: 16px;
+  height: 66vh;
 }
 
 .sa-container .sa-title {
@@ -374,6 +375,21 @@ ul {
   padding: 16px;
 }
 
+.sa-form .sa-inp-text {
+  width: 72%;
+  border: 0.5px solid gray;
+  border-radius: 10px;
+  box-shadow: 3px 2px 1px gray;
+  padding: 5px 10px 5px 10px;
+}
+
+.sa-form .sa-inp-email {
+  border: 0.5px solid gray;
+  border-radius: 10px;
+  box-shadow: 3px 2px 1px gray;
+  padding: 5px 10px 5px 10px;
+}
+
 .sa-form-bt {
   width: 100%;
   text-align: center;
@@ -384,6 +400,19 @@ ul {
   padding: 3px 10px 3px 10px;
   border-radius: 10px;
   background-color: white;
+}
+
+.sign {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.5em;
+  text-align: center;
+}
+
+.ft-img {
+  margin-left: 0.3em;
+  margin-right: 0.3em;
 }
 
 /*!
