riodinati file scss, aggiunto file scss bar top

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,12 +1,6 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;
 
-0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);.title {
-  color: #ff385c;
-  font-size: 16px;
-  font-weight: 700;
-}
-
-.btn-color {
+0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap);.btn-color {
   background-color: #ff385c !important;
   border-color: #ff385c !important;
 }
@@ -97,11 +91,6 @@ ul {
   padding-bottom: 30px;
 }
 
-.nav-flex {
-  display: flex;
-  min-height: 100%;
-}
-
 .template-image {
   height: 160px;
   width: 160px;
@@ -162,10 +151,6 @@ ul {
   padding-left: 40px;
 }
 
-.title-border {
-  border-bottom: 1px solid #EEEEEE;
-}
-
 .global-padding {
   padding: 50px;
 }
@@ -217,10 +202,6 @@ ul {
   font-size: 13px;
   text-decoration: none;
   font-weight: 600 !important;
-}
-
-.m-right {
-  margin-right: 20px;
 }
 
 .button_crud {
@@ -398,12 +379,26 @@ ul {
   padding-left: 18px;
 }
 
+.menu-items {
+  color: #ff385c !important;
+}
+
+.title {
+  color: #ff385c;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.title-border {
+  border-bottom: 1px solid #EEEEEE;
+}
+
 .margin-nav {
   margin-top: 12px;
 }
 
-.menu-items {
-  color: #ff385c !important;
+.m-right {
+  margin-right: 20px;
 }
 
 .login-title {
