--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,6 +8,8 @@
 @import './partials/common';
 //side navbar
 @import './partials/navbarside';
+//title bar
+@import './partials/title';
 //login
 @import './partials/login';
 //reset user agent
