--- a/public/css/app.css
+++ b/public/css/app.css
@@ -196,24 +196,27 @@ ul {
 
 .index-cards .index-card .index-card-price {
   width: 90%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
   padding: 0px 10px 20px 10px;
 }
 
 .index-cards .index-card .index-card-price .index-card-title {
   font-size: 0.8em;
   opacity: 0.5;
+  margin-bottom: 3px;
 }
 
 .index-cards .index-card .index-card-price .index-btn {
-  padding: 10px;
+  padding: 5px;
   color: red;
   border-radius: 10px;
   border: 0.2px solid grey;
   box-shadow: 2px 2px 1px gray;
+}
+
+.index-cards .index-card .index-card-price .index-btn:hover {
+  box-shadow: 0 0 5px 2px gray;
+  border: 1px solid gray;
+  border-radius: 5px;
 }
 
 .index-cards .index-card .index-cover-img {
