--- a/resources/sass/partials/_landingpage.scss
+++ b/resources/sass/partials/_landingpage.scss
@@ -78,10 +78,7 @@
         text-decoration: none;
         color: black;
     }
-
-
 }
-
 
 .opacity {
     opacity: 0.5;
@@ -117,35 +114,42 @@
             border-radius: 20px 20px 0px 0px;
         }
 
-
-
         .index-card-text{
             padding: 5%;
             width: 90%;
-            // height: 15px;
         }
-
-
 
         .index-card-price{
             width: 90%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            align-items: center;
+            // display: flex;
+            // flex-wrap: wrap;
+            // justify-content: space-between;
+            // align-items: center;
             padding: 0px 10px 20px 10px;
 
             .index-card-title{
                 font-size: 0.8em;
                 opacity: 0.5;
+                margin-bottom: 3px;
             }
 
             .index-btn{
-                padding: 10px;
+                padding: 5px;
                 color: red;
                 border-radius: 10px;
                 border: 0.2px solid grey;
                 box-shadow: 2px 2px 1px gray;
+
+                &:hover{
+                    -webkit-box-shadow: 0 0 5px 2px gray;
+                    -moz-box-shadow: 0 0 5px 2px gray;
+                    box-shadow: 0 0 5px 2px gray;
+                    border: 1px solid gray;
+                    -moz-border-radius: 5px;
+                    -webkit-border-radius: 5px;
+                    -khtml-border-radius: 5px;
+                    border-radius: 5px;
+                };
             }
         }
 
@@ -161,7 +165,5 @@
                 color: white;
             }
         }
-
-
     }
 }
