--- a/public/css/app.css
+++ b/public/css/app.css
@@ -204,7 +204,8 @@ ul {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-.login-title {
+.login-title,
+.register-title {
   font-weight: bold;
   text-align: center;
   font-weight: bold;
@@ -215,7 +216,8 @@ ul {
   padding: 10px 5%;
 }
 
-.button-login {
+.button-login,
+.button-register {
   padding: 5px 10px !important;
   margin: 5px 10px;
   border-radius: 5px;
@@ -248,7 +250,8 @@ nav .navbar-options .navbar-nav a {
   padding: 0 10px;
 }
 
-.login-container {
+.login-container,
+.register-container {
   text-align: center;
 }
 
@@ -264,11 +267,14 @@ nav .navbar-options .navbar-nav a {
 }
 
 .card .form-control {
-  width: 20rem;
+  width: 20vw;
   border-radius: 10px;
   padding: 10px;
   font-size: small;
   font-weight: bold;
+}
+
+.card .form-group {
   margin-bottom: 1rem;
 }
 
@@ -280,6 +286,14 @@ nav .navbar-options .navbar-nav a {
 
 .card .form-check input {
   vertical-align: middle;
+}
+
+.invalid-feedback {
+  display: block;
+  text-align: initial;
+  color: #ff385c;
+  font-size: 0.7rem;
+  font-weight: light;
 }
 
 * {
