--- a/resources/sass/partials/_login.scss
+++ b/resources/sass/partials/_login.scss
@@ -1,7 +1,7 @@
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.login-title {
+.login-title,.register-title {
     font-weight: bold;
     text-align: center;
     font-weight: bold;
@@ -11,7 +11,7 @@
 
     padding: 10px 5%;
 }
-.button-login{
+.button-login,.button-register{
    padding: 5px 10px !important;
    margin: 5px 10px;
    border-radius: 5px;
@@ -49,16 +49,20 @@ nav {
         }
     }
 }
-.login-container{
+.login-container,.register-container{
     text-align: center;
 }
 .card{
     .form-control{
-        width: 20rem;
+        
+        width: 20vw;
         border-radius: 10px ;
         padding: 10px;
         font-size: small;
         font-weight: bold;
+        
+    }
+    .form-group{
         margin-bottom:1rem;
     }
     .form-check{
@@ -78,5 +82,12 @@ nav {
     background-color: rgb(255, 255, 255);
     border-radius: 15px;
     
+}
+.invalid-feedback{
+    display: block;
+    text-align: initial;
+    color: $color-accent;
+    font-size: 0.7rem;
+    font-weight: light;
 }
 
